--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,9 +31,7 @@ website:
         href: trademark.qmd
   favicon: images/logo.png
   twitter-card: true
-  comments: 
-    utterances:
-      repo: pr2tik1/pr2tik1.github.io
+  comments: false
   # google-analytics:
   # body-header:
   # body-footer:
